--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ h1,h2,h3,h4,h5,h6{
   font-weight: normal;
 }
 body {
+  width: 100%;
+  height: 100%;
   font-size: 16px;
   line-height: 1.5;
   color: #1d2c40;
